RESOLVED FIXED253064
ImageBufferBackend has functions marked as const when they are not that in practice
https://bugs.webkit.org/show_bug.cgi?id=253064
Summary ImageBufferBackend has functions marked as const when they are not that in pr...
Kimmo Kinnunen
Reported 2023-02-28 01:01:11 PST
ImageBufferBackend has functions marked as const when they are not that in practice The object is expected to hold caches and do lazy instantiation. It's not useful to mark the abstract methods const with these expectations.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-02-28 01:01:36 PST
Kimmo Kinnunen
Comment 2 2023-02-28 01:04:50 PST
EWS
Comment 3 2023-03-01 00:30:34 PST
Committed 260988@main (fc59b09d8313): <https://commits.webkit.org/260988@main> Reviewed commits have been landed. Closing PR #10786 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.