ImageBufferBackend has functions marked as const when they are not that in practice https://bugs.webkit.org/show_bug.cgi?id=253064 rdar://106020570

Reviewed by Said Abou-Hallawa.

Remove const qualifier from ImageBufferBackend methods that are not
const in practice. Even getters like context() and get*() have implicit
assumptions about lazy work and caching, so it is not useful to pretend
the methods are const.

Remove ImageBufferBackend::platformLayer() const function altogether,
it is unused.

* Source/WebCore/platform/graphics/ImageBuffer.cpp:
(WebCore::ImageBuffer::platformLayer const): Deleted.
* Source/WebCore/platform/graphics/ImageBufferBackend.cpp:
(WebCore::ImageBufferBackend::copyNativeImageForDrawing):
(WebCore::ImageBufferBackend::getPixelBuffer):
(WebCore::ImageBufferBackend::copyNativeImageForDrawing const): Deleted.
(WebCore::ImageBufferBackend::getPixelBuffer const): Deleted.
* Source/WebCore/platform/graphics/ImageBufferBackend.h:
(WebCore::ImageBufferBackend::copyToPlatformTexture):
(WebCore::ImageBufferBackend::platformLayer const): Deleted.
(WebCore::ImageBufferBackend::copyToPlatformTexture const): Deleted.
* Source/WebCore/platform/graphics/cg/ImageBufferCGBitmapBackend.cpp:
(WebCore::ImageBufferCGBitmapBackend::context):
(WebCore::ImageBufferCGBitmapBackend::backendSize const):
(WebCore::ImageBufferCGBitmapBackend::copyNativeImage):
(WebCore::ImageBufferCGBitmapBackend::getPixelBuffer):
(WebCore::ImageBufferCGBitmapBackend::context const): Deleted.
(WebCore::ImageBufferCGBitmapBackend::copyNativeImage const): Deleted.
(WebCore::ImageBufferCGBitmapBackend::getPixelBuffer const): Deleted.
* Source/WebCore/platform/graphics/cg/ImageBufferCGBitmapBackend.h:
* Source/WebCore/platform/graphics/cg/ImageBufferIOSurfaceBackend.cpp:
(WebCore::ImageBufferIOSurfaceBackend::context):
(WebCore::ImageBufferIOSurfaceBackend::invalidateCachedNativeImage):
(WebCore::ImageBufferIOSurfaceBackend::invalidateCachedNativeImageIfNeeded):
(WebCore::ImageBufferIOSurfaceBackend::copyNativeImage):
(WebCore::ImageBufferIOSurfaceBackend::copyNativeImageForDrawing):
(WebCore::ImageBufferIOSurfaceBackend::getPixelBuffer):
(WebCore::ImageBufferIOSurfaceBackend::context const): Deleted.
(WebCore::ImageBufferIOSurfaceBackend::invalidateCachedNativeImage const): Deleted.
(WebCore::ImageBufferIOSurfaceBackend::invalidateCachedNativeImageIfNeeded const): Deleted.
(WebCore::ImageBufferIOSurfaceBackend::copyNativeImage const): Deleted.
(WebCore::ImageBufferIOSurfaceBackend::copyNativeImageForDrawing const): Deleted.
(WebCore::ImageBufferIOSurfaceBackend::getPixelBuffer const): Deleted.
* Source/WebCore/platform/graphics/cg/ImageBufferIOSurfaceBackend.h:
* Source/WebKit/WebProcess/GPU/graphics/ImageBufferShareableBitmapBackend.cpp:
(WebKit::ImageBufferShareableBitmapBackend::copyNativeImage):
(WebKit::ImageBufferShareableBitmapBackend::getPixelBuffer):
(WebKit::ImageBufferShareableBitmapBackend::copyNativeImage const): Deleted.
(WebKit::ImageBufferShareableBitmapBackend::getPixelBuffer const): Deleted.
* Source/WebKit/WebProcess/GPU/graphics/ImageBufferShareableBitmapBackend.h:
* Source/WebKit/WebProcess/GPU/graphics/cocoa/ImageBufferRemoteIOSurfaceBackend.cpp:
(WebKit::ImageBufferRemoteIOSurfaceBackend::context):
(WebKit::ImageBufferRemoteIOSurfaceBackend::copyNativeImage):
(WebKit::ImageBufferRemoteIOSurfaceBackend::getPixelBuffer):
(WebKit::ImageBufferRemoteIOSurfaceBackend::context const): Deleted.
(WebKit::ImageBufferRemoteIOSurfaceBackend::copyNativeImage const): Deleted.
(WebKit::ImageBufferRemoteIOSurfaceBackend::getPixelBuffer const): Deleted.
* Source/WebKit/WebProcess/GPU/graphics/cocoa/ImageBufferRemoteIOSurfaceBackend.h:
* Source/WebKit/WebProcess/GPU/graphics/cocoa/ImageBufferShareableMappedIOSurfaceBackend.cpp:
(WebKit::ImageBufferShareableMappedIOSurfaceBackend::copyNativeImage):
(WebKit::ImageBufferShareableMappedIOSurfaceBackend::copyNativeImage const): Deleted.
* Source/WebKit/WebProcess/GPU/graphics/cocoa/ImageBufferShareableMappedIOSurfaceBackend.h:

Canonical link: https://commits.webkit.org/260988@main